Integration with 4.0-rsp-up.0, regex fix, non-collapsed sub menus

--- a/css/asu.css
+++ b/css/asu.css
@@ -357,7 +357,7 @@ h4 {
     padding: 0;
   }
   .nav-collapse .dropdown-menu {
-    display: block;
+    display: none;
   }
   #menu {
     background: #000;
